tests/diagnostics/cases/parse/41_anon_struct_missing_field_type.home
// Negative test for issue #46 — a malformed anonymous struct return
// type (missing `: T` after the field name) yields a clean diagnostic
// rather than a parser hang or a generic "Expected type name" message
// against the wrong token.

fn broken(): struct { x, y: usize } {
    return .{ .x = 0, .y = 0 }
}
